src/pddl/grammar/pddlParser.py
# Generated from pddl.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pddlParser ( Parser ):

    grammarFileName = "pddl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'define'", "'domain'", "':'", "':requirements'", 
                     "'-'", "':types'", "':constants'", "'not'", "':predicates'", 
                     "':functions'", "'assign'", "'increase'", "'decrease'", 
                     "'+'", "'*'", "'/'", "'>'", "'>='", "'<='", "'<'", 
                     "'='", "'#t'", "'and'", "'or'", "':parameters'", "':precondition'", 
                     "':effect'", "':action'", "':event'", "':process'", 
                     "'problem'", "':domain'", "':objects'", "':init'", 
                     "':goal'", "':metric'", "'maximize'", "'minimize'", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LP", "RP", 
                      "VAR", "NAME", "VARIABLE", "NUMBER", "WS" ]

    RULE_pddlDoc = 0
    RULE_domain = 1
    RULE_domainName = 2
    RULE_requireKey = 3
    RULE_requirements = 4
    RULE_parentType = 5
    RULE_typeName = 6
    RULE_type = 7
    RULE_types = 8
    RULE_constants = 9
    RULE_atomName = 10
    RULE_groundAtomParameter = 11
    RULE_liftedAtomParameter = 12
    RULE_typedAtomParameter = 13
    RULE_atomParameter = 14
    RULE_atom = 15
    RULE_typedAtom = 16
    RULE_positiveLiteral = 17
    RULE_typedPositiveLiteral = 18
    RULE_negativeLiteral = 19
    RULE_booleanLiteral = 20
    RULE_predicates = 21
    RULE_functions = 22
    RULE_modificator = 23
    RULE_operator = 24
    RULE_comparator = 25
    RULE_number = 26
    RULE_delta = 27
    RULE_constant = 28
    RULE_assignmentSide = 29
    RULE_operationSide = 30
    RULE_operation = 31
    RULE_assignment = 32
    RULE_comparation = 33
    RULE_negatedComparation = 34
    RULE_modification = 35
    RULE_effect = 36
    RULE_andClause = 37
    RULE_orClause = 38
    RULE_andEffect = 39
    RULE_emptyPrecondition = 40
    RULE_preconditions = 41
    RULE_effects = 42
    RULE_parameters = 43
    RULE_opName = 44
    RULE_opParameters = 45
    RULE_opPrecondition = 46
    RULE_opEffect = 47
    RULE_action = 48
    RULE_event = 49
    RULE_process = 50
    RULE_problem = 51
    RULE_problemName = 52
    RULE_problemDomain = 53
    RULE_typedObjects = 54
    RULE_objects = 55
    RULE_init = 56
    RULE_goal = 57
    RULE_metric = 58

    ruleNames =  [ "pddlDoc", "domain", "domainName", "requireKey", "requirements", 
                   "parentType", "typeName", "type", "types", "constants", 
                   "atomName", "groundAtomParameter", "liftedAtomParameter", 
                   "typedAtomParameter", "atomParameter", "atom", "typedAtom", 
                   "positiveLiteral", "typedPositiveLiteral", "negativeLiteral", 
                   "booleanLiteral", "predicates", "functions", "modificator", 
                   "operator", "comparator", "number", "delta", "constant", 
                   "assignmentSide", "operationSide", "operation", "assignment", 
                   "comparation", "negatedComparation", "modification", 
                   "effect", "andClause", "orClause", "andEffect", "emptyPrecondition", 
                   "preconditions", "effects", "parameters", "opName", "opParameters", 
                   "opPrecondition", "opEffect", "action", "event", "process", 
                   "problem", "problemName", "problemDomain", "typedObjects", 
                   "objects", "init", "goal", "metric" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    LP=39
    RP=40
    VAR=41
    NAME=42
    VARIABLE=43
    NUMBER=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PddlDocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(pddlParser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(pddlParser.ProblemContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_pddlDoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddlDoc" ):
                listener.enterPddlDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddlDoc" ):
                listener.exitPddlDoc(self)




    def pddlDoc(self):

        localctx = pddlParser.PddlDocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddlDoc)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.domain()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def domainName(self):
            return self.getTypedRuleContext(pddlParser.DomainNameContext,0)


        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def requirements(self):
            return self.getTypedRuleContext(pddlParser.RequirementsContext,0)


        def types(self):
            return self.getTypedRuleContext(pddlParser.TypesContext,0)


        def constants(self):
            return self.getTypedRuleContext(pddlParser.ConstantsContext,0)


        def predicates(self):
            return self.getTypedRuleContext(pddlParser.PredicatesContext,0)


        def functions(self):
            return self.getTypedRuleContext(pddlParser.FunctionsContext,0)


        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.ActionContext)
            else:
                return self.getTypedRuleContext(pddlParser.ActionContext,i)


        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.EventContext)
            else:
                return self.getTypedRuleContext(pddlParser.EventContext,i)


        def process(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.ProcessContext)
            else:
                return self.getTypedRuleContext(pddlParser.ProcessContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)




    def domain(self):

        localctx = pddlParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(pddlParser.LP)
            self.state = 123
            self.match(pddlParser.T__0)
            self.state = 124
            self.domainName()
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 125
                self.requirements()


            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 128
                self.types()


            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 131
                self.constants()


            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 134
                self.predicates()


            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 137
                self.functions()


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 143
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 140
                    self.action()
                    pass

                elif la_ == 2:
                    self.state = 141
                    self.event()
                    pass

                elif la_ == 3:
                    self.state = 142
                    self.process()
                    pass


                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_domainName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainName" ):
                listener.enterDomainName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainName" ):
                listener.exitDomainName(self)




    def domainName(self):

        localctx = pddlParser.DomainNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_domainName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(pddlParser.LP)
            self.state = 151
            self.match(pddlParser.T__1)
            self.state = 152
            self.match(pddlParser.NAME)
            self.state = 153
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_requireKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireKey" ):
                listener.enterRequireKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireKey" ):
                listener.exitRequireKey(self)




    def requireKey(self):

        localctx = pddlParser.RequireKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_requireKey)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(pddlParser.T__2)
            self.state = 156
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def requireKey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.RequireKeyContext)
            else:
                return self.getTypedRuleContext(pddlParser.RequireKeyContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_requirements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirements" ):
                listener.enterRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirements" ):
                listener.exitRequirements(self)




    def requirements(self):

        localctx = pddlParser.RequirementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_requirements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(pddlParser.LP)
            self.state = 159
            self.match(pddlParser.T__3)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 160
                self.requireKey()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParentTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(pddlParser.TypeNameContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_parentType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentType" ):
                listener.enterParentType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentType" ):
                listener.exitParentType(self)




    def parentType(self):

        localctx = pddlParser.ParentTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parentType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(pddlParser.T__4)
            self.state = 169
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)




    def typeName(self):

        localctx = pddlParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.parent = None # ParentTypeContext

        def typeName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.TypeNameContext)
            else:
                return self.getTypedRuleContext(pddlParser.TypeNameContext,i)


        def parentType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.ParentTypeContext)
            else:
                return self.getTypedRuleContext(pddlParser.ParentTypeContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = pddlParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 173
                    self.typeName()

                else:
                    raise NoViableAltException(self)
                self.state = 176 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 178
                localctx.parent = self.parentType()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.TypeContext)
            else:
                return self.getTypedRuleContext(pddlParser.TypeContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)




    def types(self):

        localctx = pddlParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(pddlParser.LP)
            self.state = 185
            self.match(pddlParser.T__5)
            self.state = 187 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 186
                self.type_()
                self.state = 189 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==42):
                    break

            self.state = 191
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def typedObjects(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.TypedObjectsContext)
            else:
                return self.getTypedRuleContext(pddlParser.TypedObjectsContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_constants

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstants" ):
                listener.enterConstants(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstants" ):
                listener.exitConstants(self)




    def constants(self):

        localctx = pddlParser.ConstantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(pddlParser.LP)
            self.state = 194
            self.match(pddlParser.T__6)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 195
                self.typedObjects()
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 201
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_atomName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomName" ):
                listener.enterAtomName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomName" ):
                listener.exitAtomName(self)




    def atomName(self):

        localctx = pddlParser.AtomNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_atomName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroundAtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_groundAtomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroundAtomParameter" ):
                listener.enterGroundAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroundAtomParameter" ):
                listener.exitGroundAtomParameter(self)




    def groundAtomParameter(self):

        localctx = pddlParser.GroundAtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_groundAtomParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiftedAtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(pddlParser.VAR, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_liftedAtomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiftedAtomParameter" ):
                listener.enterLiftedAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiftedAtomParameter" ):
                listener.exitLiftedAtomParameter(self)




    def liftedAtomParameter(self):

        localctx = pddlParser.LiftedAtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_liftedAtomParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(pddlParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedAtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.atomsType = None # TypeNameContext

        def typeName(self):
            return self.getTypedRuleContext(pddlParser.TypeNameContext,0)


        def liftedAtomParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.LiftedAtomParameterContext)
            else:
                return self.getTypedRuleContext(pddlParser.LiftedAtomParameterContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_typedAtomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedAtomParameter" ):
                listener.enterTypedAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedAtomParameter" ):
                listener.exitTypedAtomParameter(self)




    def typedAtomParameter(self):

        localctx = pddlParser.TypedAtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_typedAtomParameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 210 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 209
                self.liftedAtomParameter()
                self.state = 212 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==41):
                    break

            self.state = 214
            self.match(pddlParser.T__4)
            self.state = 215
            localctx.atomsType = self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def liftedAtomParameter(self):
            return self.getTypedRuleContext(pddlParser.LiftedAtomParameterContext,0)


        def groundAtomParameter(self):
            return self.getTypedRuleContext(pddlParser.GroundAtomParameterContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_atomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomParameter" ):
                listener.enterAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomParameter" ):
                listener.exitAtomParameter(self)




    def atomParameter(self):

        localctx = pddlParser.AtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_atomParameter)
        try:
            self.state = 219
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 217
                self.liftedAtomParameter()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 218
                self.groundAtomParameter()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomName(self):
            return self.getTypedRuleContext(pddlParser.AtomNameContext,0)


        def atomParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.AtomParameterContext)
            else:
                return self.getTypedRuleContext(pddlParser.AtomParameterContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)
